--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MakeSmallChange</title>
+    <title>MySmallChange</title>
     <!-- Custom Font - Change 'Muli' to the font you want -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">
 
@@ -24,34 +24,155 @@
 <![endif]-->
 </head>
 
-<body>
+<body id="page5">
 
     <div class="container">
-        <!-- Top Navigation-->
-        <div class="col-md-1">
-            <ul>
-                <li id="naviItem"><a href="placeholder">About</a></li>
-            </ul>
-        </div>
 
-        <div class="col-md-9">
-            <h1 id="title">Small Change</h1>
-        </div>
+        <div class="row">
+            <div class="col-md-12" id="dashboardNav">
+          <!-- Top Navigation-->
+          <div class="col-md-1">
+              <ul>
+                  <li id="naviItem"><a href="placeholder">About</a></li>
+              </ul>
+          </div>
 
-        <div class="col-md-1">
-            <ul>
-                <li id="naviItem"><a href="placeholder">Log-In</a></li>
-            </ul>
-        </div>
-        <div class="col-md-1">
-            <ul>
-                <li id="naviItem"><a href="placeholder">Sign-Up</a></li>
-            </ul>
-        </div>
-        <br>
-        <br>
+          <div class="col-md-9">
+              <h1 id="title">Small Change</h1>
+          </div>
 
+          <div class="col-md-1">
+              <ul>
+                  <li id="naviItem"><a href="placeholder">Log-In</a></li>
+              </ul>
+          </div>
+          <div class="col-md-1">
+              <ul>
+                  <li id="naviItem"><a href="placeholder">Sign-Up</a></li>
+              </ul>
+          </div>
+          <br>
+          <br>
+        </div>
+      </div>
         <!-- Close top Navigation -->
+
+        <div class="row">
+            <div class="col-md-12">
+              <div class="row">
+                <div class="col-md-4">
+                  <h3 id="section-title">Distribution of Change</h3>
+                  <br>
+                  <br>
+                  <br>
+
+                    <div class="col-sm-2">
+                        <button type="button" id="env" class="btn btn-md btn-primary"></button>
+                    </div>
+                    <div class="col-sm-10">
+                        <h4 id="label">Protect the Environment</h4>
+                    </div>
+
+
+                    <div class="col-sm-2">
+                        <button type="button" id="sust" class="btn btn-md btn-primary"></button>
+                    </div>
+                    <div class="col-sm-10">
+                        <h4 id="label">Build Sustainabile Infrastructure</h4>
+                    </div>
+
+
+                    <div class="col-sm-2">
+                        <button type="button" id="hum" class="btn btn-md btn-primary"></button>
+                    </div>
+                    <div class="col-sm-10">
+                        <h4 id="label">Fight for Human and Civil Rights</h4>
+                    </div>
+
+                    <div class="col-sm-2">
+                        <button type="button" id="ani" class="btn btn-md btn-primary"></button>
+                    </div>
+                    <div class="col-sm-10">
+                        <h4 id="label">Support Animal Welfare</h4>
+                    </div>
+
+
+                    <div class="col-sm-2">
+                        <button type="button" id="health" class="btn btn-md btn-primary"></button>
+                    </div>
+                    <div class="col-sm-10">
+                        <h4 id="label">Improve Health Around the World</h4>
+                    </div>
+
+
+                    <div class="col-sm-2">
+                        <button type="button" id="edu" class="btn btn-md btn-primary"></button>
+                    </div>
+                    <div class="col-sm-10">
+                        <h4 id="label">Extend Education to Everyone</h4>
+                    </div>
+                </div>
+
+                <div class="col-md-4" id="pie-holder">
+                    <h1><img src="/img/pie.png" alt="pie" height=="300" width="300" style="align-items:left" /></h1>
+                </div>
+                <div class="col-md-4">
+                  <h3 class="text-center" id="section-title">Monthly Average Donation</h3>
+                  <br>
+                  <br>
+                  <br>
+                  <p class="text-center" id="monAvg"> $74.70</p>
+                  <p class="text-center"> November 2016</p>
+
+                </div>
+                <br>
+                <br>
+              </div>
+              <div class="row">
+                <div class="col-md-3">
+                  <div id="story-card1">
+                  <h5 id="section-title">Program Updates From the Feild</h5>
+                  <p> Small change adds up to make a big difference. Check-out some of the updates of change happening as a direct result of your contributions.
+                  </p>
+                </div>
+                </div>
+
+                <div class="col-md-3">
+                  <div id="story-card">
+                    <div id="story-text">
+
+                  <h5>Headline</h5>
+                  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  </p>
+                </div>
+                </div>
+                </div>
+
+                <div class="col-md-3">
+                  <div id="story-card">
+                    <div id="story-text">
+
+                  <h5>Headline</h5>
+                  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  </p>
+                </div>
+                </div>
+                </div>
+
+                <div class="col-md-3">
+                  <div id="story-card">
+                    <div id="story-text">
+                  <h5>Headline</h5>
+                  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  </div>
+                  </p>
+                </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
         <!-- closing the container -->
     </div>
 
