--- a/views/form.html
+++ b/views/form.html
@@ -24,131 +24,153 @@
 <![endif]-->
 </head>
 
-<body>
+<body id="page4">
 
     <div class="container">
-        <!-- Top Navigation-->
-        <div class="col-md-1">
-            <ul>
-                <li id="naviItem"><a href="placeholder">About</a></li>
-            </ul>
-        </div>
 
-        <div class="col-md-9">
-            <h1 id="title">Small Change</h1>
-        </div>
+        <div class="row">
+            <div class="col-md-12" id="section">
+                <!-- Top Navigation-->
+                <div class="col-md-1">
+                    <ul>
+                        <li id="naviItem"><a href="placeholder">About</a></li>
+                    </ul>
+                </div>
 
-        <div class="col-md-1">
-            <ul>
-                <li id="naviItem"><a href="placeholder">Log-In</a></li>
-            </ul>
-        </div>
-        <div class="col-md-1">
-            <ul>
-                <li id="naviItem"><a href="placeholder">Sign-Up</a></li>
-            </ul>
-        </div>
-        <br>
-        <br>
+                <div class="col-md-9">
+                    <h1 id="title">Small Change</h1>
+                </div>
 
+                <div class="col-md-1">
+                    <ul>
+                        <li id="naviItem"><a href="placeholder">Log-In</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-1">
+                    <ul>
+                        <li id="naviItem"><a href="placeholder">Sign-Up</a></li>
+                    </ul>
+                </div>
+                <br>
+                <br>
+            </div>
+        </div>
         <!-- Close top Navigation -->
         <div class="row">
 
-        <div class="col-md-12" id="section">
-            <h4 class="text-center lead">Complete Your Registration by Filling Out the Form Below</h4>
-        </div>
-        <br>
-        <br>
+            <div class="col-md-12" id="section">
+              <br>
+              <h4 class="text-center lead">Complete Your Registration by Filling Out the Form Below:</h4>
 
-        <div class="col-md-12">
-            <br>
-            <br>
-            <form class="form-horizontal" id="addForm">
-                <div class="form-group">
-                    <label class="col-sm-2 control-label"> Name</label>
-                    <div class="col-md-5">
-                        <input type="text" class="form-control" placeholder="First Name" required>
-                    </div>
-                    <div class="col-md-5">
-                        <input type="text" class="form-control" placeholder="Last Name" required>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Email</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" placeholder="Email" required>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Address</label>
-                    <div class="col-md-10">
-                        <input type="text" class="form-control" placeholder="Street Number and Name, Apt" required>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label"></label>
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" placeholder="City" required>
-                    </div>
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" placeholder="State" required>
-                    </div>
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" placeholder="Zipcode" required>
-                    </div>
-                </div>
                 <br>
                 <br>
-                <div class="form-group">
-                    <label for="tags" class="col-sm-2 control-label">Option1:<br> Credit Card</label>
-                    <div class="col-md-5">
-                        <input type="text" class="form-control" placeholder="Card Number" required>
+                <form class="form-horizontal" id="addForm">
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"> Name</label>
+                        <div class="col-md-5">
+                            <input type="text" class="form-control" placeholder="First Name">
+                        </div>
+                        <div class="col-md-5">
+                            <input type="text" class="form-control" placeholder="Last Name">
+                        </div>
                     </div>
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" placeholder="Expiration" required>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Email</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" placeholder="Email">
+                        </div>
                     </div>
-                    <div class="col-md-2">
-                        <input type="text" class="form-control" placeholder="CVC Number" required>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Address</label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" placeholder="Street Number and Name, Apt">
+                        </div>
                     </div>
-                </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"></label>
+                        <div class="col-md-3">
+                            <input type="text" class="form-control" placeholder="City">
+                        </div>
+                        <div class="col-md-3">
+                            <input type="text" class="form-control" placeholder="State">
+                        </div>
+                        <div class="col-md-3">
+                            <input type="text" class="form-control" placeholder="Zipcode">
+                        </div>
+                    </div>
+                    <br>
+                    <br>
+                    <div class="form-group">
+                        <label for="tags" class="col-sm-2 control-label">Option1:<br> Credit Card</label>
+                        <div class="col-md-5">
+                            <input type="text" class="form-control" placeholder="Card Number">
+                        </div>
+                        <div class="col-md-3">
+                            <input type="text" class="form-control" placeholder="Expiration">
+                        </div>
+                        <div class="col-md-2">
+                            <input type="text" class="form-control" placeholder="CVC Number">
+                        </div>
+                    </div>
 
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Option2:<br> Bank Account</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" placeholder="Account Number">
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Option2:<br> Bank Account</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" placeholder="Account Number">
+                        </div>
                     </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"></label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" placeholder="Routing Number">
+                        </div>
+                    </div>
+                    <br>
+                    <!-- <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <a href="/congrats">
+                                <button type="submit" class="btn btn-default btn-sm btn-block">SUBMIT</button>
+                            </a>
+                        </div>
+                    </div> -->
+                </form>
+                <div class="col-sm-4">
+                    <br>
                 </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label"></label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" placeholder="Routing Number">
-                    </div>
+                <div class="col-sm-4">
+                    <a href="/congrats">
+                        <button type="submit" class="btn btn-default btn-lg btn-block">SUBMIT</button>
+                    </a>
+                    <br>
+                    <br>
+                </div>
+                <div class="col-sm-4">
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
                 </div>
                 <br>
                 <br>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <a href="/congrats">
-                            <button type="submit" class="btn btn-default btn-sm btn-block">SUBMIT</button>
-                        </a>
-                    </div>
-                </div>
-            </form>
-          </div>
+                <br>
+            </div>
         </div>
-            <!-- closing the container -->
-        </div>
+
+
+        <!-- closing the container -->
+    </div>
 
 </body>
 
 <!-- JQuery script -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
 
 <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script> -->
 
 <!-- JQuery validate -->
-<script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
+<!-- <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script> -->
 
 <script type="text/javascript">
     // $("form").validate({
@@ -166,6 +188,6 @@
 </script>
 
 <!-- CUSTOM JS -->
-<script src="js/main.js"></script>
+<!-- <script src="js/main.js"></script> -->
 
 </html>
