--- a/views/home.html
+++ b/views/home.html
@@ -24,73 +24,110 @@
 <![endif]-->
 </head>
 
-<body>
-
+<body id="page1">
     <div class="container">
 
-        <!-- Top Navigation -->
-            <div class="col-md-1">
-                <ul>
-                    <li id="naviItem"><a href="placeholder">About</a></li>
-                </ul>
-            </div>
+        <div class="row">
+            <div class="col-md-12" id="section">
+                <!-- Top Navigation -->
+                <div class="col-md-1">
+                    <ul>
+                        <li id="naviItem"><a href="placeholder">About</a></li>
+                    </ul>
+                </div>
 
-            <div class="col-md-9">
-                <h1 id="title">Small Change</h1>
-            </div>
+                <div class="col-md-9">
+                    <h1 id="title">Small Change</h1>
+                </div>
 
-            <div class="col-md-1">
-                <ul>
-                    <li  id="naviItem"><a href="placeholder">Log-In</a></li>
-                </ul>
+                <div class="col-md-1">
+                    <ul>
+                        <li id="naviItem"><a href="placeholder">Log-In</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-1">
+                    <ul>
+                        <li id="naviItem"><a href="placeholder">Sign-Up</a></li>
+                    </ul>
+                </div>
+                <br>
+                <br>
             </div>
-            <div class="col-md-1">
-                <ul>
-                    <li id="naviItem"><a href="placeholder">Sign-Up</a></li>
-                </ul>
-            </div>
-            <br>
-            <br>
+        </div>
 
         <!-- Close Top Navigation-->
 
         <div class="row">
             <div class="col-md-12" id="section">
-              <br>
-              <br>
-              <br>
-
-                <h2 class="text-center" id="bigWords">Fund the change you want to see in the world, one cent at a time.</h2>
                 <br>
-                <p class="text-center lead" style="padding:30px;padding-left30px; padding-right:30px">
-                  Each time we make a purchase, we have an impact on the world around us. Although obscured by
-                  the vast complexities of our industrialized ecosystem, our purchase decisions
-                  are directly shaping the world we live in, for better and for worse. The goal of Small Change is to
-                  begin to acknowledge those complexities and find a way to create a more visible, more positive
-                  connection between the actions we take everyday and the action we want to see but may not know how to create. </p>
-                <a href="/makesmallchange">
-                <button type="submit" class="btn btn-default btn-lg btn-block">Lets Get Started</button>
-              </a>
+                <br>
+                <br>
+
+                <h2 class="text-center" id="firstWords" style="padding-right:150px; padding-left:150px;">Fund the change you want to see in the world, one cent at a time.</h2>
+                <br>
+                <p class="text-center lead" style="padding:30px;padding-left30px; padding-right:30px" style="padding-right:250px; padding-left:250px;">
+                    Our purchase decisions shape the world we live in, for better and for worse. <br>
+                    Small Change is an acknowledgement that while it may be hard to change <br>
+                    our behavior overnight, even the smallest of changes count for something.</p>
+                <div class="col-md-4">
+                  <br>
+                </div>
+                <div class="col-md-4">
+                  <a href="/makesmallchange">
+                      <button type="submit" class="btn btn-default btn-lg btn-block">Lets Get Started</button>
+                  </a>
+                </div>
+                <div class="col-md-4">
+                  <br>
+                </div>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
             </div>
-            <br>
-            <div class="col-md-12" id="section">
-              <h4 class="text-center" id="section-title">How Small Change Makes Big Impact</h4>
             </div>
+
+            <div class="row">
             <div class="col-md-12" id="section">
+                <h4 class="text-center" id="section-title">How It Works</h4>
+                <div class="col-md-4" id="how-it-works">
+                  <img src="/img/icon1.png" alt="icon1" height=="100" width="100" style="opacity:0.8;"/>
+                  <p><br>
+Every time you make a purchase, we add a 50¢ charge that gets saves to your Small Change account.</p>
+                </div>
+                <div class="col-md-4" id="how-it-works">
+                  <img src="/img/icon2.png" alt="icon2" height=="100" width="100" style="opacity:0.8;" />
+                  <br>
+                  <p><br>This money goes to monthly donations that fund organizations making positive change in areas you care about.</p>
+                </div>
+                <div class="col-md-4" id="how-it-works">
+                  <img src="/img/icon3.png" alt="icon3" height=="100" width="100" style="opacity:0.8;" />
+                  <br>
+                  <p><br>Small Change vetts the organizations you fund and keeps you connected to the change you're helping to create.</p>
+                </div>
+            </div>
+          </div>
+
+          <div class="row">
+
+            <div class="col-md-12" id="section">
+              <div class="col-md-offset-1 col-md-10">
                 <h4 class="text-center" id="section-title">Explore Areas Where You Can Make Change</h4>
                 <br>
-                <button type="submit" class="btn btn-default btn-lg">Environment</button>
-                <button type="submit" class="btn btn-default btn-lg">Food Systems</button>
-                <button type="submit" class="btn btn-default btn-lg">Health</button>
-                <button type="submit" class="btn btn-default btn-lg">Animal Welfare</button>
-                <button type="submit" class="btn btn-default btn-lg">Education</button>
-                <button type="submit" class="btn btn-default btn-lg">Youth</button>
-                <button type="submit" class="btn btn-default btn-lg">Sustainability</button>
-
+                <button type="submit" class="btn btn-default btn-md">Environment</button>
+                <button type="submit" class="btn btn-default btn-md">Food Systems</button>
+                <button type="submit" class="btn btn-default btn-md">Health</button>
+                <button type="submit" class="btn btn-default btn-md">Animal Welfare</button>
+                <button type="submit" class="btn btn-default btn-md">Education</button>
+                <button type="submit" class="btn btn-default btn-md">Youth</button>
+                <button type="submit" class="btn btn-default btn-md">Sustainability</button>
+              </div>
             </div>
         </div>
 
-    <!-- closing the container -->
+        <!-- closing the container -->
     </div>
 
 </body>
