--- a/views/start.html
+++ b/views/start.html
@@ -24,115 +24,181 @@
 <![endif]-->
 </head>
 
-<body>
+<body id="page2">
 
     <div class="container">
-        <!-- Top Navigation-->
-        <div class="col-md-1">
-            <ul>
-                <li id="naviItem"><a href="placeholder">About</a></li>
-            </ul>
-        </div>
 
-        <div class="col-md-9">
-            <h1 id="title">Small Change</h1>
-        </div>
+        <div class="row">
+            <div class="col-md-12" id="section">
+                <!-- Top Navigation-->
+                <div class="col-md-1">
+                    <ul>
+                        <li id="naviItem"><a href="placeholder">About</a></li>
+                    </ul>
+                </div>
 
-        <div class="col-md-1">
-            <ul>
-                <li id="naviItem"><a href="placeholder">Log-In</a></li>
-            </ul>
+                <div class="col-md-9">
+                    <h1 id="title">Small Change</h1>
+                </div>
+
+                <div class="col-md-1">
+                    <ul>
+                        <li id="naviItem"><a href="placeholder">Log-In</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-1">
+                    <ul>
+                        <li id="naviItem"><a href="placeholder">Sign-Up</a></li>
+                    </ul>
+                </div>
+                <br>
+                <br>
+            </div>
         </div>
-        <div class="col-md-1">
-            <ul>
-                <li id="naviItem"><a href="placeholder">Sign-Up</a></li>
-            </ul>
-        </div>
-        <br>
-        <br>
 
         <!-- Close top Navigation -->
         <div class="row">
-        <div class="col-md-12" id="section">
-          <h4 class="text-center ">Select areas where you would like to make a difference:</h4>
+
+            <div class="col-md-12" id="section">
+
+                <br>
+                <h4 class="text-center lead">Select areas where you would like to make a difference:</h4>
+                <br>
+                <a href='#'>
+                    <div class="col-md-3" id="card">
+                        <div class="col-sm-2">
+                            <button type="button" id="add" class="btn btn-primary">+</button>
+                            <!-- <input class="form-control input-lg" id="input-1" type="checkbox"> -->
+                            <!-- <script>
+                                .size(@width; @height) {
+                                    width: 50;
+                                    height: 50;
+                                }
+                            </script> -->
+                        </div>
+                        <div class="col-sm-10">
+                            <h3 id="section-title">Protect the Environment</h3>
+                        </div>
+                        <h1><img src="/img/img1.jpg" alt="werk_forest" height=="253" width="253"/></h1>
+                        <p> Example Organizations:
+                            <br> Greenpeace, Friends of Earth, EarthJustice
+                        </p>
+                    </div>
+                </a>
+                <div class="col-md-3" id="card">
+                    <div class="col-sm-2">
+                        <button type="button" id="add" class="btn btn-sm btn-primary">+</button>
+                    </div>
+                    <div class="col-sm-10">
+                        <h3 id="section-title">Build Sustainabile Infrastructure</h3>
+                    </div>
+                    <h1><img src="/img/img3.jpg" alt="werk_windmill" height=="253" width="253" style="opacity:0.8;" /></h1>
+                    <p> Example Organizations:
+                        <br> Greenpeace, Friends of Earth, EarthJustice
+                    </p>
+                </div>
+
+                <div class="col-md-3" id="card">
+                    <div class="col-sm-2">
+                        <button type="button" id="add" class="btn btn-sm btn-primary">+</button>
+                    </div>
+                    <div class="col-sm-10">
+                        <h3 id="section-title">Grow A Healthier Food System</h3>
+                    </div>
+                    <h1><img src="/img/img2.jpg" alt="werk_farm" height=="253" width="253" /></h1>
+                    <p> Example Organizations:
+                        <br> EWG, Food and Water Watch, Rainforest Alliance
+                    </p>
+                </div>
+
+                <div class="col-md-3" id="card">
+                    <div class="col-sm-2">
+                        <button type="button" id="add" class="btn btn-sm btn-primary">+</button>
+                    </div>
+                    <div class="col-sm-10">
+                        <h3 id="section-title">Fight for Human and Civil Rights</h3>
+                    </div>
+                    <h1><img src="/img/img4.jpg" alt="werk_farm" height=="253" width="253"/></h1>
+                    <p> Example Organizations:
+                        <br> ACLU, International Development Exchange, Planned Parenthood
+                    </p>
+                </div>
+
+                <div class="col-md-3" id="card">
+                    <div class="col-sm-2">
+                        <button type="button" id="add" class="btn btn-sm btn-primary">+</button>
+                    </div>
+                    <div class="col-sm-10">
+                        <h3 id="section-title">Support Animal Welfare</h3>
+                    </div>
+                    <h1><img src="/img/img5.jpg" alt="werk_farm" height=="253" width="253" style="opacity:0.8;"/></h1>
+                    <p> Example Organizations:
+                        <br> Defenders of Wildlife, Humane League, Animal Equality
+                    </p>
+                </div>
+
+                <div class="col-md-3" id="card">
+                    <div class="col-sm-2">
+                        <button type="button" id="add" class="btn btn-sm btn-primary">+</button>
+                    </div>
+                    <div class="col-sm-10">
+                        <h3 id="section-title">Improve Health Around the World</h3>
+                    </div>
+                    <h1><img src="/img/img6.jpg" alt="werk_farm" height=="253" width="253"/></h1>
+                    <p> Example Organizations:
+                        <br> Evidence Action, Doctors Without Borders, Planned Parenthood
+                    </p>
+                </div>
+
+                <div class="col-md-3" id="card">
+                  <div class="col-sm-2">
+                      <button type="button" id="add" class="btn btn-sm btn-primary">+</button>
+                  </div>
+                  <div class="col-sm-10">
+                    <h3 id="section-title">Extend Education to Everyone</h3>
+                  </div>
+                    <h1><img src="/img/img7.jpg" alt="werk_farm" height=="253" width="253"/></h1>
+                    <p> Example Organizations:
+                        <br> tbd, tbd, tbd
+                    </p>
+                    <br>
+                </div>
+
+                <div class="col-md-3" id="card">
+                  <div class="col-sm-2">
+                      <button type="button" id="add" class="btn btn-sm btn-primary">+</button>
+                  </div>
+                  <div class="col-sm-10">
+                    <h3 id="section-title">Address Poverty and Huger</h3>
+                  </div>
+                    <h1><img src="/img/img8.jpg" alt="werk_farm" height=="253" width="253"/></h1>
+                    <p> Example Organizations:
+                        <br> tbd, tbd, tbd
+                    </p>
+                    <br>
+                </div>
+
+                <div class="col-md-4">
+                    <br>
+                    <br>
+                </div>
+                <div class="col-md-4">
+                    <br>
+                    <br>
+                    <a href="/select">
+                        <button type="submit" class="btn btn-default btn-lg btn-block">DONE</button>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <br>
+                    <br>
+                </div>
+
+
+            </div>
         </div>
-
-        <div class="row">
-            <div class="col-md-3">
-              <h3 id="section-title">Environmental Protection</h3>
-              <p> Example Organizations:
-                <br>
-                Greenpeace, Friends of Earth, EarthJustice
-              </p>
-            </div>
-
-            <div class="col-md-3">
-              <h3 id="section-title">Sustainable Infrastructure</h3>
-              <p> Example Organizations:
-                <br>
-                Greenpeace, Friends of Earth, EarthJustice
-              </p>
-            </div>
-
-            <div class="col-md-3">
-              <h3 id="section-title">Food System</h3>
-              <br>
-              <br>
-              <p> Example Organizations:
-                <br>
-                Greenpeace, Friends of Earth, EarthJustice
-              </p>
-            </div>
-
-            <div class="col-md-3">
-              <h3 id="section-title">Human Rights</h3>
-              <br>
-              <br>
-              <p> Example Organizations:
-                <br>
-                Greenpeace, Friends of Earth, EarthJustice
-              </p>
-            </div>
-
-            <div class="col-md-3">
-              <h3 id="section-title">Environmental Protection</h3>
-              <p> Example Organizations:
-                <br>
-                Greenpeace, Friends of Earth, EarthJustice
-              </p>
-            </div>
-
-            <div class="col-md-3">
-              <h3 id="section-title">Sustainable Infrastructure</h3>
-              <p> Example Organizations:
-                <br>
-                Greenpeace, Friends of Earth, EarthJustice
-              </p>
-            </div>
-
-            <div class="col-md-3">
-              <h3 id="section-title">Food System</h3>
-              <p> Example Organizations:
-                <br>
-                Greenpeace, Friends of Earth, EarthJustice
-              </p>
-            </div>
-
-            <div class="col-md-3">
-              <h3 id="section-title">Human Rights</h3>
-              <p> Example Organizations:
-                <br>
-                Greenpeace, Friends of Earth, EarthJustice
-              </p>
-            </div>
-          <a href="/register">
-            <button type="submit" class="btn btn-default btn-lg btn-block">DONE</button>
-         </a>
-
-        </div>
-
-      </div>
-        <!-- closing the container -->
+    </div>
+    <!-- closing the container -->
     </div>
 
 </body>
