--- a/views/congrats.html
+++ b/views/congrats.html
@@ -24,9 +24,12 @@
 <![endif]-->
 </head>
 
-<body>
+<body id="page5">
 
     <div class="container">
+
+      <div class="row">
+          <div class="col-md-12" id="section">
         <!-- Top Navigation-->
         <div class="col-md-1">
             <ul>
@@ -50,17 +53,48 @@
         </div>
         <br>
         <br>
+      </div>
+    </div>
 
         <!-- Close top Navigation -->
         <div class="row">
             <div class="col-md-12" id="section">
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
               <h2 class="text-center" id="bigWords">Congratulations!</h2>
+              <br>
               <p class="text-center lead" style="padding:30px;padding-left30px; padding-right:30px">
                 Thank you for giving back just a little bit more.
               </p>
-              <a href="/dashboard">
-              <button type="submit" class="btn btn-default btn-lg btn-block">Sign In</button>
-            </a>
+              <br>
+              <br>
+              <div class="col-sm-4">
+                  <br>
+              </div>
+              <div class="col-sm-4">
+                  <a href="/mysmallchange">
+                      <button type="submit" class="btn btn-default btn-lg btn-block">SUBMIT</button>
+                  </a>
+                  <br>
+                  <br>
+              </div>
+              <div class="col-sm-4">
+                  <br>
+              </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
             </div>
         </div>
 
